[DSD-7171] inji certify 0.10.0 release
Signed-off-by: techno-467 <prafulrakhade02@gmail.com>
Signed-off-by: amaydixit11 <amaydixit11@gmail.com>