@@ -15,7 +15,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>io.mosip.certify</groupId>
 	<artifactId>certify-parent</artifactId>
-	<version>0.12.0-SNAPSHOT</version>
+	<version>0.10.0</version>
     <packaging>pom</packaging>
     <name>certify</name>
 	<description>Parent project for MOSIP certify</description>
@@ -46,9 +46,9 @@
 
 	<repositories>
 		<repository>
-			<id>ossrh-central</id>
-			<name>MavenCentralRepository</name>
-			<url>https://central.sonatype.com/repository/maven-snapshots</url>
+			<id>ossrh</id>
+			<name>CentralRepository</name>
+			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
 			<layout>default</layout>
 			<snapshots>
 				<enabled>true</enabled>
@@ -72,11 +72,11 @@
 	<distributionManagement>
 		<snapshotRepository>
 			<id>ossrh</id>
-			<url>https://central.sonatype.com/repository/maven-snapshots/</url>
+			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
 		</snapshotRepository>
 		<repository>
 			<id>ossrh</id>
-			<url>https://central.sonatype.com/api/v1/publisher</url>
+			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
 		</repository>
 	</distributionManagement>
 
@@ -84,7 +84,6 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
 		<!-- maven -->
-		<maven.compiler.release>21</maven.compiler.release>
 		<maven.compiler.source>21</maven.compiler.source>
 		<maven.compiler.target>21</maven.compiler.target>
 		<maven.compiler.version>3.8.1</maven.compiler.version>
@@ -97,12 +96,11 @@
 		<maven-shade-plugin.version>4.4.3</maven-shade-plugin.version>
 
 		<spring.boot.version>3.2.3</spring.boot.version>
-		<central.publishing.maven.plugin.version>0.7.0</central.publishing.maven.plugin.version>
 
 		<java.version>21</java.version>
 		<jose4j.version>0.6.5</jose4j.version>
 		<kernel.core.version>1.3.0-beta.1</kernel.core.version>
-		<kernel.keymanager.version>1.3.0-beta.2</kernel.keymanager.version>
+		<kernel.keymanager.version>1.3.0-beta.1</kernel.keymanager.version>
 		<jsonld.common.java.version>0.5.0</jsonld.common.java.version>
 		<springdoc-openapi-webmvc-ui-version>2.5.0</springdoc-openapi-webmvc-ui-version>
 		<commons.validator.version>1.7</commons.validator.version>
@@ -114,7 +112,7 @@
 		<module>certify-core</module>
 		<module>certify-integration-api</module>
 	</modules>
-	
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -132,21 +130,20 @@
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
-			<!--<version>1.18.30</version>  -->
-		</dependency> 
+			<version>1.18.30</version>
+		</dependency>
 		<dependency>
 			<groupId>jakarta.servlet</groupId>
 			<artifactId>jakarta.servlet-api</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.json</groupId>
-			<artifactId>json</artifactId>
-			<version>20241224</version>
+			<groupId>com.vaadin.external.google</groupId>
+			<artifactId>android-json</artifactId>
+			<version>0.0.20131108.vaadin1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.junit.vintage</groupId>
 			<artifactId>junit-vintage-engine</artifactId>
-			<scope>test</scope>
 		</dependency>
 	</dependencies>
 
@@ -206,27 +203,14 @@
 					<plugin>
 						<groupId>org.springframework.boot</groupId>
 						<artifactId>spring-boot-maven-plugin</artifactId>
-					<!--	<version>${spring.boot.version}</version> -->
+						<version>${spring.boot.version}</version>
 						<configuration>
 							<executable>true</executable>
 							<layout>ZIP</layout>
 						</configuration>
 						<executions>
-							<!-- Build info and repackage -->
-							<execution>
-								<id>build-info-repackage</id>
-								<goals>
-									<goal>build-info</goal>
-									<goal>repackage</goal>
-								</goals>
-								<configuration>
-									<attach>false</attach>
-								</configuration>
-							</execution>
-							<!-- Integration test startup -->
 							<execution>
 								<id>pre-integration-test</id>
-								<phase>pre-integration-test</phase>
 								<goals>
 									<goal>start</goal>
 								</goals>
@@ -241,14 +225,19 @@
 										<argument>--server.port=8090</argument>
 										<argument>--server.servlet.path=/app/generic</argument>
 									</arguments>
+
 								</configuration>
 							</execution>
-							<!-- Integration test shutdown -->
 							<execution>
 								<id>post-integration-test</id>
-								<phase>post-integration-test</phase>
 								<goals>
 									<goal>stop</goal>
+								</goals>
+							</execution>
+							<execution>
+								<goals>
+									<goal>build-info</goal>
+									<goal>repackage</goal>
 								</goals>
 							</execution>
 						</executions>
@@ -274,20 +263,12 @@
 					</plugin>
 				</plugins>
 			</build>
-        </profile>
+		</profile>
 
 	</profiles>
 
 	<build>
 		<plugins>
-			<!-- <plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-				<version>${spring.boot.version}</version> 
-				<configuration>
-					<mainClass>io.mosip.certify.CertifyServiceApplication</mainClass>
-				</configuration>
-        	</plugin> -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
@@ -296,7 +277,7 @@
 					<skipTests>${skipTests}</skipTests>
 					<skip>false</skip>
 					<argLine>
-						${argLine} --add-opens java.xml/jdk.xml.internal=ALL-UNNAMED
+						${argLine} --add-opens java.xml/jdk.xml.internal=ALL-UNNAMED --illegal-access=permit
 					</argLine>
 				</configuration>
 			</plugin>
@@ -370,13 +351,14 @@
 				</configuration>
 			</plugin>
 			<plugin>
-				<groupId>org.sonatype.central</groupId>
-				<artifactId>central-publishing-maven-plugin</artifactId>
-				<version>${central.publishing.maven.plugin.version}</version>
+				<groupId>org.sonatype.plugins</groupId>
+				<artifactId>nexus-staging-maven-plugin</artifactId>
+				<version>1.6.14</version>
 				<extensions>true</extensions>
 				<configuration>
-					<publishingServerId>ossrh</publishingServerId>
-					<autoPublish>false</autoPublish>
+					<serverId>ossrh</serverId>
+					<nexusUrl>https://oss.sonatype.org/</nexusUrl>
+					<autoReleaseAfterClose>false</autoReleaseAfterClose>
 				</configuration>
 			</plugin>
 
@@ -419,32 +401,16 @@
 				<version>${maven.compiler.version}</version>
 				<configuration>
 					<forceJavacCompilerUse>true</forceJavacCompilerUse>
-					<release>${maven.compiler.target}</release>
-					<source>${maven.compiler.target}</source>
+					<source>${maven.compiler.source}</source>
 					<target>${maven.compiler.target}</target>
 				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-dependency-plugin</artifactId>
-				<version>3.8.1</version>
-				<executions>
-					<execution>
-						<id>copy</id>
-						<phase>install</phase>
-						<goals>
-							<goal>copy-dependencies</goal>
-						</goals>
-						<configuration>
-							<outputDirectory>
-								${project.build.directory}/lib
-							</outputDirectory>
-							 <includeScope>provided</includeScope>
-							<excludeTransitive>true</excludeTransitive>
-							<!-- <excludeScope>compile</excludeScope> -->
-						</configuration>
-					</execution>
-				</executions>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<configuration>
+					<aggregate>true</aggregate>
+				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>pl.project13.maven</groupId>
